Fix button clipping

--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ body{
     height: 50px;
     cursor: pointer;
     top: 1;
-    position: fixed;
     border-radius: 50%;
     margin-top: 10px;
     -webkit-transition-duration: 0.4s; /* Safari */
@@ -98,6 +97,8 @@ body{
     gap: 20px;
     padding-left: 50px;
     padding-top: 50px;  
+    max-width: 100vw;
+    flex-wrap: wrap;
 }
 
 .book{
